[project]
name = "vdf2"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "r41ngee", email = "r41ngee@yandex.ru" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
vdf2 = "vdf2:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
